fix: date formatting works in safari, link issue on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -110,17 +110,22 @@ nav {
     position: relative;
     display: inline-block;
 
+    &:before {
+      z-index: -1;
+      transition: all 0.1s ease-in-out;
+      position: absolute;
+      display: block;
+      content: '';
+      opacity: 0;
+      height: 4px;
+      top: 1.6em;
+      background: black;
+      width: 100%;
+    }
+
     &:hover, &.active {
       &:before {
-        z-index: -1;
-        transition: all 0.1s ease-in-out;
-        position: absolute;
-        display: block;
-        content: '';
-        height: 4px;
-        top: 1.6em;
-        background: black;
-        width: 100%;
+        opacity: 1;
       }
     }
   }
